# altr-mcp-server

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  LICENSE  README.md  mcp.json  pyproject.toml  renovate.json  server.json
.github/workflows/: ci.yml  publish-mcp.yml  publish.yml  security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
altr_mcp/: __init__.py  instructions.md  middleware.py  models.py  server.py  settings.py
altr_mcp/tools/: __init__.py  access_management.py  access_request.py  audit.py  audit_report.py  classification.py  critical_tokenization.py  database.py  key_management.py  policy.py  sidecar_config.py  tag.py  telemetry.py  vault_tokenization.py
altr_mcp/utils/: __init__.py  access_management.py  access_request.py  api.py  audit.py  audit_report.py  classification.py  column.py  critical_tokenization.py  database.py  key_management.py  logging.py  policy.py  sidecar_config.py  snowflake.py  tag.py  telemetry.py  vault_tokenization.py
docs/: access-management.md  access-requests.md  audit-report.md  audits.md  classification.md  critical-tokenization.md  databases.md  error-handling.md  index.md  key-management.md  policies.md  sidecar-config.md  tags.md  telemetry.md  vault-tokenization.md
tests/: conftest.py
tests/integration/: conftest.py  test_access_management.py  test_access_request.py  test_audit.py  test_audit_report.py  test_classification.py  test_critical_tokenization.py  test_database.py  test_key_management.py  test_policy.py  test_sidecar_config.py  test_tag.py  test_telemetry.py  test_vault_tokenization.py
tests/unit/: test_annotations.py  test_api.py  test_audit_report_helpers.py  test_canary.py  test_logging.py  test_middleware.py  test_models.py  test_retry.py  test_server.py  test_settings.py  test_tokenization_helpers.py
