[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altr-mcp"
version = "0.1.0"
description = "MCP server for automating ALTR setup by reading Security Requirements documents, connecting Snowflake tags to ALTR, and creating policies/rules"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.17.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "snowflake-connector-python>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/altrsoftware/altr-mcp-server"
Repository = "https://github.com/altrsoftware/altr-mcp-server"

[project.scripts]
altr-mcp = "altr_mcp.server:main"
